--- a/package.json
+++ b/package.json
@@ -26,18 +26,26 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express-validator": "^2.20.33",
+    "@types/handlebars": "^4.0.40",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "google-auth-library": "^9.15.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "slugify": "^1.6.6"
   }
 }
